# blackboard-extractor

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
src/: cli.rs  main.rs  process.rs
ui/: app-window.slint
wix/: main.wxs
